--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     
     <section class="center">
       <h3>My Picture</h3>
-      <img src="../image/malupiton1.jpg" alt="My Picture" class="profile-pic">
+      <img src="malupiton1.jpg" alt="My Picture" class="profile-pic">
       <p>Hi, this is me! Nice to meet you.</p>
     </section>
 
