--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       <p><strong>Phone:</strong> 09270493815</p>
       <p><strong>Email:</strong> adogong@ssct.edu.ph</p>
       <p>- or you can add me on my Facebook account: 
-        <a href="../video/kupal.mp4" target="_blank">Antion Delmar</a><br> Have a pleasant day!
+        <a href="https://youtu.be/xvFZjo5PgG0?si=7DpZ5CaJ3GbKJGnz" target="_blank">Antion Delmar</a><br> Have a pleasant day!
       </p>
     </section>
 
